--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@ header {
   margin: 0 auto;
 }
 
-nav {
+header nav {
   margin: 0 80px;
   width: 960px;
 }
-nav img {
+header nav img {
   margin-top:10px;
   float: left;
   margin-right: 30px;
@@ -30,15 +30,20 @@ main {
   margin: 0 auto;
 }
 
+main img {
+  width: 100%;
+}
+
 main nav {
-  display:inline-block;
-  margin: 0 auto;
+  display:inline;
   width: 100%
 }
 
 main nav img {
   float: left;
-  width: 33.33%;
+  width: 30%;
+  padding:5px;
+  justify-content:center;
 }
 
 main article section * {
@@ -49,7 +54,7 @@ main article section * {
 main article img {
   float: left;
   display:inline-block;
-  box-sizing: border-box;
+  width:50%;
 }
 
 main article section {
@@ -81,7 +86,9 @@ button:hover {
 
 
 
-footer {
+footer img {
   width: 100%;
+  height: 90px;
   background-color: darkgrey;
+  margin: 0 auto;
 }
